[package]
name = "tangram_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = ["cdylib"]
path = "lib.rs"


[dependencies]
jni = "0.19.0"
memmap = "0.7"
tangram_core = { version = "0.7.0", path = "../../crates/core" }
tangram_model = { version = "0.7.0", path = "../../crates/model" }
